exercises/ex1-11-persisting-data/log-output/manifestsSimple/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hash-ing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hash-svc
                port:
                  number: 2345
